update content - w/ Sam; remove draft

--- a/SDL_JoyHatEvent.mediawiki
+++ b/SDL_JoyHatEvent.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_JoyHatEvent =
 A structure that contains joystick hat position change event information.
@@ -22,7 +21,7 @@ A structure that contains joystick hat position change event information.
 |-
 |Uint8
 |'''value'''
-|the current position of the hat; see [[#Remarks|Remarks]] for details
+|the new position of the hat; see [[#Remarks|Remarks]] for details
 |}
 
 == Code Examples ==
@@ -35,30 +34,7 @@ You can add your code example here
 
 An SDL_JOYHATMOTION event occurs whenever a user moves a hat on the joystick.
 
-'''value''' may be any of the following ^*a bitwise OR'd combination of* any of *the following*^:
-{|
-|SDL_HAT_LEFTUP
-|-
-|SDL_HAT_UP
-|-
-|SDL_HAT_RIGHTUP
-|-
-|SDL_HAT_LEFT
-|-
-|SDL_HAT_CENTERED
-|-
-|SDL_HAT_RIGHT
-|-
-|SDL_HAT_LEFTDOWN
-|-
-|SDL_HAT_DOWN
-|-
-|SDL_HAT_RIGHTDOWN
-|}
-Note that zero means the POV is centered. 
-
-''-or-''
-
+'''value''' may be one of the following:
 {|
 |SDL_HAT_LEFTUP
 |
