--- a/SDL_JoyAxisEvent.mediawiki
+++ b/SDL_JoyAxisEvent.mediawiki
@@ -34,6 +34,9 @@ You can add your code example here
 
 An SDL_JOYAXISMOTION event occurs whenever a user moves an axis on the joystick.
 
+== Related Enumerations ==
+:[[SDL_EventType]]
+
 == Related Structures ==
 :[[SDL_JoyBallEvent]]
 :[[SDL_JoyButtonEvent]]
