--- a/SDL_DollarGestureEvent.mediawiki
+++ b/SDL_DollarGestureEvent.mediawiki
@@ -56,6 +56,7 @@ You can add your code example here
 
 == Related Structures ==
 :[[SDL_Event]]
+:[[SDL_MultiGestureEvent]]
 
 == Related Functions ==
 :[[SDL_FunctionLeaveSectionIfEmpty]]
