--- a/SDL_TextInputEvent.mediawiki
+++ b/SDL_TextInputEvent.mediawiki
@@ -30,6 +30,9 @@ You can add your code example here
 == Remarks ==
 * [[SDL_TextInputEvent]]() is a member of the [[SDL_Event]] union and is used when an event of type SDL_TEXTINPUT is reported. *
 
+== Related Enumerations ==
+:[[SDL_EventType]]
+
 == Related Structures ==
 :[[SDL_TextEditingEvent]]
 
