--- a/SDL_UserEvent.mediawiki
+++ b/SDL_UserEvent.mediawiki
@@ -46,7 +46,7 @@ SDL_PushEvent(&event);
 *<br/>[[SDL_UserEvent]] is in the '''user''' member of the ,,structure,, [[SDL_Event]] ^union^. This event is unique; it is never created by SDL but only by the user. The event can be pushed onto the event queue using [[SDL_PushEvent]](). The contents of the structure members <<Color2(green,(SDL_UserEvent or SDL_Event?  Unclear.)>> are completely up to the programmer, <<Color2(green,not sure of the comma here. Consider ; . -)>> the only requirement is that '''type''' is a value from SDL_USEREVENT to SDL_NUMEVENTS-1 (inclusive). <br/>*
 
 == Related Enumerations ==
-:[[SDL_EventType]]???
+:[[SDL_EventType]]
 
 == Related Functions ==
 :[[SDL_PushEvent]] *
