--- a/SDL_WindowEvent.mediawiki
+++ b/SDL_WindowEvent.mediawiki
@@ -50,7 +50,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Enumerations ==
-:[[SDL_EventType]]???
+:[[SDL_EventType]]
 :[[SDL_WindowEventID]]
 
 == Related Functions ==
