--- a/SDL_MouseMotionEvent.mediawiki
+++ b/SDL_MouseMotionEvent.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_MouseMotionEvent =
-A structure that contains mouse motion event ,,structure,, ^information^ (event.motion.*).
+A structure that contains mouse motion event information.
 
 
 == Data Fields ==
@@ -20,18 +20,6 @@ A structure that contains mouse motion event ,,structure,, ^information^ (event.
 |'''state'''
 |the current button state
 |-
-|Uint8
-|'''padding1'''
-|^8 empty bits to total 32^???
-|-
-|Uint8
-|'''padding2'''
-|^8 empty bits to total 32^???
-|-
-|Uint8
-|'''padding3'''
-|^8 empty bits to total 32^???
-|-
 |int
 |'''x'''
 |X coordinate, relative to window
@@ -42,11 +30,11 @@ A structure that contains mouse motion event ,,structure,, ^information^ (event.
 |-
 |int
 |'''xrel'''
-|the relative motion in the X direction
+|relative motion in the X direction
 |-
 |int
 |'''yrel'''
-|the relative motion in the Y direction
+|relative motion in the Y direction
 |}
 
 
@@ -58,8 +46,11 @@ You can add your code example here
 == Remarks ==
 <<Color2(green,The following was taken from the old 1.2 wiki and may not be applicable to 1.3.)>>
 
-[[SDL_MouseMotionEvent]]() is a member of the [[SDL_Event]] union and is used when an event of type SDL_MOUSEMOTION is reported.
- Simply put, a SDL_MOUSEMOTION type event occurs when a user moves the mouse within the application window or when [[SDL_WarpMouse^InWindow^???]]() is called. Both the absolute ('''x''' and '''y''') and relative ('''xrel''' and '''yrel''') coordinates are reported along with the current button states ('''state'''). The button state can be interpreted using the SDL_BUTTON macro (see [[SDL_GetMouseState]]()).
+[[SDL_MouseMotionEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_MOUSEMOTION is reported.
+
+An SDL_MOUSEMOTION event occurs whenever a user moves the mouse within the application window or when [[SDL_WarpMouseInWindow]]() is called. 
+
+The button state can be interpreted using the SDL_BUTTON macro (see [[SDL_GetMouseState]]()).
 
 If the cursor is hidden ([[SDL_ShowCursor]](0)) and the input is grabbed (SDL_WM_!GrabInput(SDL_GRAB_ON)), then the mouse will give relative motion events even when the cursor reaches the edge of the screen. This is currently only implemented on Windows and Linux/Unix-alikes. 
 
