--- a/SDL_MouseMotionEvent.mediawiki
+++ b/SDL_MouseMotionEvent.mediawiki
@@ -18,7 +18,7 @@ A structure that contains mouse motion event information.
 |-
 |Uint8
 |'''state'''
-|the current button state
+|the current button state; see [[#Remarks|Remarks]] for details
 |-
 |int
 |'''x'''
@@ -44,13 +44,27 @@ You can add your code example here
 ```
 
 == Remarks ==
-<<Color2(green,The following was taken from the old 1.2 wiki and may not be applicable to 1.3.)>>
-
 [[SDL_MouseMotionEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_MOUSEMOTION is reported.
 
 An SDL_MOUSEMOTION event occurs whenever a user moves the mouse within the application window or when [[SDL_WarpMouseInWindow]]() is called. 
 
-The button state can be interpreted using the SDL_BUTTON macro (see [[SDL_GetMouseState]]()).
+'''state''' is an 8-bit button bitmask of the current button state and is the same as that returned by [[SDL_GetMouseState]]().  You can test different buttons by using the SDL_BUTTON(X) macros with the following masks:
+{|
+|SDL_BUTTON_LMASK
+|SDL_BUTTON(SDL_BUTTON_LEFT)
+|-
+|SDL_BUTTON_MMASK
+|SDL_BUTTON(SDL_BUTTON_MIDDLE)
+|-
+|SDL_BUTTON_RMASK
+|SDL_BUTTON(SDL_BUTTON_RIGHT)
+|-
+|SDL_BUTTON_X1MASK
+|SDL_BUTTON(SDL_BUTTON_X1)
+|-
+|SDL_BUTTON_X2MASK
+|SDL_BUTTON(SDL_BUTTON_X2)
+|}
 
 If the cursor is hidden ([[SDL_ShowCursor]](0)) and the input is grabbed (SDL_WM_!GrabInput(SDL_GRAB_ON)), then the mouse will give relative motion events even when the cursor reaches the edge of the screen. This is currently only implemented on Windows and Linux/Unix-alikes. 
 
