--- a/SDL_MouseMotionEvent.mediawiki
+++ b/SDL_MouseMotionEvent.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_MouseMotionEvent =
 A structure that contains mouse motion event information.
@@ -61,11 +60,7 @@ An SDL_MOUSEMOTION event occurs whenever a user moves the mouse within the appli
 |SDL_BUTTON_X2MASK
 |}
 
-'''xrel''' and '''yrel''' are relative to the last SDL_MOUSEMOTIONEVENT.
-
-If the cursor is hidden ([[SDL_ShowCursor]](0)) and the input is grabbed (SDL_WM_!GrabInput(SDL_GRAB_ON)), then the mouse will give relative motion events even when the cursor reaches the edge of the screen. This is currently only implemented on Windows and Linux/Unix-alikes. 
-
-<<Color2(green,There are currently no pages for SDL_WarpMouse or SDL_WM_!GrabInput.  Do they still exist in 1.3?  Is [[SDL_WarpMouseInWindow]] the appropriate replacement for SDL_WarpMouse?  If it is should it be listed in RFs also?)>>
+Relative motion is stored in '''xrel''' and '''yrel''' and is relative to the last motion event.  If relative mouse mode is enabled with [[SDL_SetRelativeMouseMode]](), then the mouse will give relative motion events even when the cursor reaches the edge of the screen.
 
 == Related Enumerations ==
 :[[SDL_EventType]]
@@ -75,6 +70,8 @@ If the cursor is hidden ([[SDL_ShowCursor]](0)) and the input is grabbed (SDL_WM
 :[[SDL_MouseWheelEvent]]
 
 == Related Functions ==
+:[[SDL_GetMouseState]]
+:[[SDL_SetRelativeMouseMode]]
 
 ----
 [[CategoryStruct]], [[CategoryEvents]]
