--- a/SDL_MouseWheelEvent.mediawiki
+++ b/SDL_MouseWheelEvent.mediawiki
@@ -31,12 +31,11 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
-
 [[SDL_MouseWheelEvent]] is a member of the [[SDL_Event]] structure and is used when an event of type SDL_MOUSEWHEEL is reported.
 
-An SDL_MOUSEWHEEL event occurs whenever a user moves the mouse wheel. 
+An SDL_MOUSEWHEEL event occurs whenever a user moves the mouse wheel.
 
+Movements to the left generate negative '''x''' values and to the right generate positive '''x''' values.  Movements up (scroll forward) generate negative '''y''' values and down (scroll backward) generate positive '''y'''values.  <<Color2(green,This information needs to be verified.)>>
 
 == Related Enumerations ==
 :[[SDL_EventType]]
