--- a/SGWikiBasics.mediawiki
+++ b/SGWikiBasics.mediawiki
@@ -4,7 +4,7 @@
 
 = SDL API Documentation Style Guide: Getting Started =
 
-```#!wiki caution
+```#!wiki important
 Due to spammers, write access to this wiki is disabled by default.  If you haven't already, please email your wiki username and the type(s) of edits you would like to make to <<MailTo(ANTI SPAM docs AT libsdl DOT org)>> to be given write access, to ensure that you receive the appropriate Style Guides, and to coordinate efforts.
 
 Thank you!
@@ -19,15 +19,6 @@ Together this Style Guide and the [[APIContributionStyleGuide|SDL API Contributi
 If you would like to make '''other contributions''' beyond Code Examples or Remarks we welcome your contribution!  If you haven't already, please email <<MailTo(ANTI SPAM docs AT libsdl DOT org)>> to receive additional Style Guides and to coordinate efforts.
 
 
-```#!wiki tip
-'''Send Feedback or Join the Mailing List'''
-
-If you have not already joined, we have set up a mailing list ([[http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org|docs-libsdl.org]]) for discussions of documentation, including the style guides.  
-
-If you would prefer not to join the mailing list you can always submit feedback about anything on the wiki, including the style guides, using the Feedback form above.
-
-''We hope to hear from you!''
-```
 
 
 
