--- a/SGWikiBasics.mediawiki
+++ b/SGWikiBasics.mediawiki
@@ -1,6 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-
+<!-- acl All:read -->
 '''DRAFT'''
 
 = Style Guide: Wiki Basics =
